external-crates/move/crates/move-compiler/tests/move_check/parser/use_module_member_invalid_comma.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_module_member_invalid_comma.move:4:26
  │
4 │     use 0x1::X::{S as XS,,};
  │                          ^ Unexpected ','. Expected a module member alias
