external-crates/move/crates/move-compiler/tests/move_check/parser/use_module_member_invalid_comma.move

module 0x42::M {

    use 0x1::X::{S as XS,,};

    fun foo(_s: &XS) {}

}

module  0x1::X {
    struct S {}
}
